# bulk-resume-parser

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dbstudio  Dockerfile.dev  components.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  drizzle.config.ts  next.config.ts  package.json  remembmer.txt  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  start-database.sh  tsconfig.json  typings.d.ts
.claude/: settings.local.json
services/aggregate-json/: config.py  main.py  pyproject.toml  requirements.txt  utils.py
services/conversion-director/: config.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
services/extract-archive/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  utils.py
services/img-to-txt/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  utils.py
services/json-to-sheet/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  utils.py
services/pdf-to-txt/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  utils.py
services/resume-extractor/: Dockerfile  README.md  config.py  converters.py  extractor.py  main.py  processor.py  pyproject.toml  utils.py
services/rtf-to-txt/: Dockerfile  README.md  config.py  main.py  pyproject.toml  utils.py
services/txt-passthrough/: Dockerfile  README.md  config.py  main.py  pyproject.toml  utils.py
services/txt-to-json/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  resume_data_extractor.py  utils.py
services/word-to-txt/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt  utils.py
src/: env.js  instrumentation.ts
src/app/: layout.tsx  page.tsx
src/app/api/parseable-files/: route.ts
src/app/api/parsing-task/: route.ts
src/app/dashboard/: layout.tsx  page.tsx  unauthorized.tsx
src/app/dashboard/account/: page.tsx
src/app/sentry-example-page/: page.tsx
src/components/: empty-state.tsx  multi-file-dropzone.tsx  parsing-task-form.tsx  theme-toggle.tsx  with-auth.tsx
src/components/auth/: logged-in-status.tsx  login-form.tsx  signup-form.tsx
src/components/extraction-config-card/: index.tsx
src/components/extraction-config-form/: extraction-config-section.tsx  index.tsx
src/components/parsing-tasks/: parsing-task-card.tsx  parsing-task-list.tsx
src/components/side-nav/: index.tsx
src/components/top-nav/: index.tsx
src/components/ui/: carousel.tsx  chart.tsx  form.tsx  input-otp.tsx  sidebar.tsx  toggle-group.tsx
src/constants/: index.ts
src/lib/: auth.ts  errors.ts  extraction-config.ts  schema.ts  types.ts  utils.ts
src/lib/extraction-config/: index.ts  schema.ts  types.ts
src/server/api/: root.ts  trpc.ts
src/server/db/: schema.ts
src/server/s3/: index.ts  service.ts
src/server/utils/: auth.ts  index.ts
src/styles/: globals.css
src/trpc/: react.tsx  server.ts
src/ui/: alert-dialog.tsx  calendar.tsx  carousel.tsx  command.tsx  form.tsx
(+64 files in other folders)
