[project]
name = "aggregate-json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.13",
    "minio>=7.2.15",
    "orjson>=3.10.18",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
]
