[project]
name = "img-to-txt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "minio>=7.2.15",
    "numpy>=2.3.0",
    "opencv-python>=4.11.0.86",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.0",
]
