[project]
name = "txt-to-json"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.5.5",
    "aiohttp>=3.12.13",
    "google-generativeai>=0.8.5",
    "minio>=7.2.15",
    "python-dotenv>=1.1.0",
    "redis>=6.2.0",
]
